RESOLVED FIXED220996
REGRESSION(r267641): WebKitDeveloperExtras preference has no effect for WebKitLegacy clients
https://bugs.webkit.org/show_bug.cgi?id=220996
Summary REGRESSION(r267641): WebKitDeveloperExtras preference has no effect for WebKi...
Blaze Burg
Reported 2021-01-26 11:16:43 PST
.
Attachments
Patch v1.0 (3.47 KB, patch)
2021-01-26 11:21 PST, Blaze Burg
no flags
Blaze Burg
Comment 1 2021-01-26 11:17:17 PST
Blaze Burg
Comment 2 2021-01-26 11:21:12 PST
Created attachment 418449 [details] Patch v1.0
EWS
Comment 3 2021-01-26 17:11:25 PST
Committed r271926: <https://trac.webkit.org/changeset/271926> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418449 [details].
Note You need to log in before you can comment on or make changes to this bug.