REGRESSION(r267641): WebKitDeveloperExtras preference has no effect for WebKitLegacy clients https://bugs.webkit.org/show_bug.cgi?id=220996 <rdar://72173139>

Reviewed by Sam Weinig.

Source/WebKitLegacy/mac:

Read back this preference when propagating it, because the value depends on
more than just the preference key. For example, it allows Debug builds to act
as if the preference is always enabled.

* WebView/WebView.mm:
(-[WebView _preferencesChanged:]):

Source/WTF:

This preference should use custom bindings for WebKitLegacy.

* Scripts/Preferences/WebPreferencesDebug.yaml:


Canonical link: https://commits.webkit.org/233373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271926 268f45cc-cd09-0410-ab3c-d52691b4dbfc